tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_errors_if_while_body_type_is_not_unit/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type (), found type Field
  ┌─ src/main.nr:4:13
  │
4 │             1
  │             -
  │

Aborting due to 1 previous error
